Fix internal macOS builds https://bugs.webkit.org/show_bug.cgi?id=285020 rdar://141811525

Reviewed by Richard Robinson.

* Source/WebKit/UIProcess/Cocoa/PlatformWritingToolsUtilities.mm:
(WebKit::convertToWebAction):

There are new enum values that only exist in certain build configurations.
Simply return a non-sensical default for now, as WebKit does not support the
action yet.

Canonical link: https://commits.webkit.org/288163@main